12577
For me, the snippet doesn't compile in 2.11.8. I actually get two errors in 2.11.8:
```
Test.scala:3: error: type mismatch;
 found   : (Double, <empty>.T) => Double
 required: (Double, T(in trait Foo)) => Double
    foldLeft(num.zero)(num.plus)
                           ^
Test.scala:3: error: type mismatch;
 found   : B(in method sum$mcD$sp)
 required: <empty>.B
    foldLeft(num.zero)(num.plus)
                      ^
```
